# nv-fancurve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
configs/: balanced.toml  default.toml  silent.toml
docs/superpowers/plans/: 2026-05-09-dual-fan-gpu-support.md
nvfan/: __init__.py  __main__.py  config.py  daemon.py  installer.py  nvidia.py  presets.py  xorg.py
nvfan/assets/: __init__.py
nvfan/assets/configs/: __init__.py  aggressive.toml
systemd/: nv-fancurve-xorg.service  nv-fancurve.service
tests/: test_cli.py  test_config.py  test_curve.py  test_daemon.py  test_installer.py  test_nvidia.py
xorg/: 10-nv-fancurve.conf
