[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-fancurve"
version = "0.1.0"
description = "Temperature-based fan curve daemon for NVIDIA GPUs on headless Linux"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alican Kiraz", email = "your@email.com" },
]
keywords = ["nvidia", "gpu", "fan", "thermal", "linux", "rtx", "headless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = [
    "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.1",
    "mypy >= 1.0",
]

[project.scripts]
nv-fancurve = "nvfan.__main__:main"

[project.urls]
Homepage = "https://github.com/alicankiraz1/nv-fancurve"
Issues = "https://github.com/alicankiraz1/nv-fancurve/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nvfan*"]

[tool.setuptools.package-data]
nvfan = ["py.typed", "assets/configs/*.toml"]

[tool.setuptools.data-files]
"share/nv-fancurve/configs" = [
    "configs/default.toml",
    "configs/silent.toml",
    "configs/aggressive.toml",
    "configs/balanced.toml",
]
"share/nv-fancurve/systemd" = [
    "systemd/nv-fancurve-xorg.service",
    "systemd/nv-fancurve.service",
]
"share/nv-fancurve/xorg" = ["xorg/10-nv-fancurve.conf"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
